# web-scrapers-python

./: .dockerignore  .env.example  .gitignore  =24.3.0  Dockerfile  Makefile  README.md  demo_ai_features.py  demo_cassandra_integration.py  docker-compose.cassandra.yml  pixi-full.toml  pixi.toml  pyproject-poetry.toml  pyproject.toml  pytest.ini  requirements.txt  seeds.txt  setup.cfg
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
deployment/: README.md  setup-deployment.sh
deployment/cassandra/: init-seeds.cql
deployment/ci-cd/github-templates/: pull_request_template.md
deployment/ci-cd/github-templates/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  parser_request.md
deployment/ci-cd/workflows/: ci.yml
deployment/docker-compose/: docker-compose.prod.yml  docker-compose.yml  docker-helper.sh
deployment/kubernetes/: ORCHESTRATION.md  README.md  batch-orchestrator.yaml  configmap.yaml  cronjobs.yaml  deploy.sh  deployment.yaml  job-template.yaml  namespace.yaml  orchestrator-config.yaml  service.yaml
src/: main.py  orchestrator.py  routes.py
src/ai/: __init__.py  content_analyzer.py
src/core/: base_parser.py  logger.py  parser_manager.py  parser_registry.py  proxy_config.py  seeds.py
src/database/: __init__.py  cassandra_manager.py  cassandra_parser_manager.py
src/parsers/: ai_enhanced_news.py  generic_news.py  weibo.py
src/schemas/: news.py
tests/: conftest.py  test_ai_enhanced_parser.py  test_base_parser.py  test_basic_functionality.py  test_cassandra_integration.py  test_generic_news_parser.py  test_integration.py  test_news_schema.py  test_parser_registry.py  test_starter.py
